update  stream